# rusty-roms

./: README.md  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  download.rs  lib.rs  main.rs  query.rs  settings.rs  setup.rs  start.rs  status.rs
src-tauri/src/data-old/: mod.rs
src-tauri/src/extras/: download-single-original-code.rs
src/lib/server/db/: drizzle.config.ts
src/routes/: +page.svelte
