[package]
name = "rusty-roms"
version = "0.1.0"
description = "Rust written Rom downloader"
authors = ["Zeus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rusty_roms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["rustls", "blocking", "json"] }
dirs = "6.0.0"
scraper = "0.25.0"
tokio = {version = "1.49.0", features = ["full"] }
zip = "7.4.0"
tauri-plugin-dialog = "2.6.0"
rustls-platform-verifier = "0.6.2"
